feat: stack functionalities
