# src/swagger.json
@@ -177,8 +177,8 @@
         }
       }
     },
-    "/stack/answer/{answerId}/like": {
-      "get": {
+    "/stack/answer/{answerId}/vote": {
+      "patch": {
         "tags": [
           "StackAnswer"
         ],
